# Curproject04

./: .gitignore  CI_CD_GUIDE.md  CI_CD_SETUP_REPORT.md  DEMO_FINAL_REPORT.md  DEMO_REPORT.md  ENVIRONMENT.md  INTEGRATION_REPORT.md  LINTING_FIXES_REPORT.md  Makefile  README.md  REQUIREMENTS_COMPLIANCE.md  ROLLBACK_INSTRUCTIONS.md  STAGE8_COMPLETION_REPORT.md  TEST_FIXES_REPORT.md  TEST_REPORT.md  coverage.xml  docker-compose.yml  env.example  integration_test.py  pre-flight.sh  pyproject.toml  run_tests.py  test_imports.py  test_results.json
.cursor/rules/: auto-testing-w-playwright.mdc  auto-working.mdc  check-ports.mdc  initial-description.mdc  project-stages.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  docker-compose.test.yml
db/: models.py  test_models.py
db/clickhouse/: 001_init_clickhouse.sql
db/migrations/: 001_init_postgres.sql  002_add_text_to_sources.sql  003_add_news_table.sql
llm/: Dockerfile  api.py  init.sh  init_models.sh  test_api.py
scripts/: ci-local.sh
tests/: __init__.py  conftest.py  test_integration.py  test_load.py  test_security.py
ui/: Dockerfile  app.py  app_demo.py  config.py  database.py  models.py  news_service.py  redis_queue.py  requirements.txt  test_app.py  test_clickhouse.py  web_search.py
worker/: Dockerfile  api.py  config.py  custom_worker.py  database.py  models.py  requirements.txt  tasks.py  test_tasks.py  worker.py
